# lab-4

./: .gitignore  README.md  macos.md
docker/: Dockerfile  forReference.txt  lab-4-compose.yml
robotiq_hande/robotiq_hande_description/: CMakeLists.txt  package.xml
robotiq_hande/robotiq_hande_description/config/: ros2_controllers.yaml
robotiq_hande/robotiq_hande_description/rviz/: view_robot.rviz
simple_planner/simple_planner/: simple_planner.py  ur3e_robotiq.py
src/robotiq_hande/robotiq_hande_description/: README.me
src/simple_planner/: package.xml  setup.py
src/simple_spawner/: package.xml  setup.cfg  setup.py
src/simple_spawner/config/: bridge.yaml  bridge_spawner.yaml
src/simple_spawner/launch/: spawner.launch.py
src/simple_spawner/models/: cuboid.sdf
src/simple_spawner/models/cube/: model.sdf
src/simple_spawner/models/cuboid/: model.sdf
src/simple_spawner/rviz/: base.rviz  view_tf.rviz
src/simple_spawner/simple_spawner/: sdf_templates.py  simple_spawner.py
src/simple_spawner/worlds/: spawner_world.sdf
src/ur3e/scripts/: simple_publisher.py
ur3e/ur3e_description/: README.md  package.xml
ur3e_robotiq/: README.md
ur3e_robotiq/scripts/: simple_teleop.py
ur3e_robotiq/ur3e_robotiq_description/: CMakeLists.txt  README.md  package.xml
ur3e_robotiq/ur3e_robotiq_gz/: package.xml
ur3e_robotiq/ur3e_robotiq_moveit_config/: CMakeLists.txt  package.xml
ur3e_robotiq/ur3e_robotiq_moveit_py/: CMakeLists.txt  package.xml
ur3e_robotiq/ur3e_robotiq_moveit_py/launch/: test.launch.py
ur3e_robotiq/ur3e_robotiq_moveit_py/scripts/: test.py
(+56 files in other folders)
