<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simple_spawner</name>
  <version>0.0.0</version>
  <description>Simple spawner for GZ Harmonic.</description>
  <maintainer email="enwerem@terpmail.umd.edu">drce</maintainer>
  <license>BSD</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>ament_index_python</depend>
  <depend>python3-yaml</depend>
  <depend>ur3e_robotiq_gz</depend>
  <depend>ros_gz_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
